OWL-5691: Delegate.saveSelections > wipe action and status EID/date when resetting